[tool.poetry]
name = "se2021"
version = "0.1.0"
description = "Morse encoding service."
authors = ["H. Turgut Uyar <uyar@itu.edu.tr>"]
license = "BSD-3-LICENSE"

readme="README.md"
homepage="https://github.com/uyaritu/se2021"
repository="https://github.com/uyaritu/se2021"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
pytest-cov = "^3.0.0"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py38, py37
isolated_build = True

[testenv]
deps =
    pytest
    flask

commands =
    pytest tests
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
